@@ -1,14 +1,16 @@
 package com.verygood.security.larky.parser;
 
+import com.google.common.collect.Lists;
+
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
-
 import lombok.SneakyThrows;
 
 public class PrependMergedStarFile implements StarFile {
 
-  private List<String> PRELOADER_PREFIXES = List.of(" ", "#", "load");
+  private List<String> PRELOADER_PREFIXES = Lists.newArrayList(" ", "#", "load");
   private String content;
 
   public PrependMergedStarFile(String scriptFile) {
@@ -39,8 +41,8 @@ public class PrependMergedStarFile implements StarFile {
   @Override
   public StarFile resolve(String path) {
     Path resolved = StarFile.isAbsolute(path)
-        ? Path.of(path)
-        : Path.of(getClass().getClassLoader().getResource(path).toURI());
+        ? Paths.get(path)
+        : Paths.get(getClass().getClassLoader().getResource(path).toURI());
 
     return new PathBasedStarFile(resolved, null, null);
   }
